<resources>
    <string name="app_name">MgsDashboard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Kayıt Olanlar (10)</string>
    <string name="totalUsers">TOPLAM KULLANICI SAYISI</string>
    <string name="onlineUsers">ONLINE KİŞİ SAYISI</string>
    <string name="logs">Son Olaylar (10)</string>
    <string name="totalUsersPetner">TOPLAM KULLANICI SAYISI</string>
    <string name="numberPets">EVCİL HAYVAN SAYISI</string>
    <string name="numberOwnership">SAHİPLENDİRME İLAN SAYISI</string>
    <string name="Hosgeldiniz">Hoşgeldiniz</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>