<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/petnerBackgroundColor"
    tools:context=".view.fragment.petner.PetnerFragment">


    <ProgressBar
        android:id="@+id/progressBar3"
        style="?android:attr/progressBarStyle"
        android:layout_width="29dp"
        android:layout_height="28dp"
        android:layout_marginTop="10dp"
        android:indeterminateTint="@color/petnerPrimaryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewKullaniciSayisi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="42dp"
                android:layout_marginEnd="80dp"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center"
                android:text="@string/totalUsersPetner"
                android:textColor="@color/petnerPrimaryText"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/edtTextUsersCount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="114dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="114dp"
                android:background="@drawable/petnerview"
                android:fontFamily="@font/montserrat_semibold"
                android:gravity="center"
                android:text="-"
                android:textColor="@color/white"
                android:textSize="40sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewKullaniciSayisi" />

            <TextView
                android:id="@+id/textViewKisiSayisi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="108dp"
                android:layout_marginTop="27dp"
                android:layout_marginEnd="108dp"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center"
                android:text="@string/numberPets"
                android:textColor="@color/petnerPrimaryText"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtTextUsersCount" />

            <TextView
                android:id="@+id/edtTextPetsCount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="114dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="114dp"
                android:background="@drawable/petnerview"
                android:fontFamily="@font/montserrat_semibold"
                android:gravity="center"
                android:text="-"
                android:textColor="@color/white"
                android:textSize="40sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewKisiSayisi" />

            <TextView
                android:id="@+id/edtTextAdoptionPetsCount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="114dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="114dp"
                android:background="@drawable/petnerview"
                android:fontFamily="@font/montserrat_semibold"
                android:gravity="center"
                android:text="-"
                android:textColor="@color/white"
                android:textSize="40sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewIlanSayisi" />

            <TextView
                android:id="@+id/textViewIlanSayisi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="70dp"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center"
                android:text="@string/numberOwnership"
                android:textColor="@color/petnerPrimaryText"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtTextPetsCount" />


            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_chart"
                android:layout_width="373dp"
                android:layout_height="349dp"
                android:layout_marginStart="36dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="36dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/petnerdashboard"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/circle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtTextAdoptionPetsCount"/>

            <me.relex.circleindicator.CircleIndicator3
                android:id="@+id/circle"
                android:layout_width="100dp"
                android:layout_height="15dp"
                android:layout_marginStart="165dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="165dp"
                app:ci_drawable="@drawable/circleindicator_petner"
                app:ci_height="7dp"
                app:ci_width="7dp"
                app:layout_constraintTop_toBottomOf="@id/view_chart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/petner_Register_RecyclerView"
                android:layout_width="374dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="58dp"
                android:layout_marginEnd="36dp"
                android:background="@drawable/recyclerview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/circle">

            </androidx.recyclerview.widget.RecyclerView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/petner_Logs_RecyclerView"
                android:layout_width="374dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="58dp"
                android:layout_marginEnd="36dp"
                android:layout_marginBottom="75dp"
                android:background="@drawable/recyclerview"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/petner_Register_RecyclerView">

            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/textViewRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/add"
                android:textColor="@color/petnerPrimaryColor"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/petner_Register_RecyclerView"
                app:layout_constraintStart_toStartOf="@+id/petner_Register_RecyclerView" />

            <TextView
                android:id="@+id/textViewLogs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/logs"
                android:textColor="@color/petnerPrimaryColor"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/petner_Logs_RecyclerView"
                app:layout_constraintStart_toStartOf="@+id/petner_Logs_RecyclerView" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>